--- a/style.css
+++ b/style.css
@@ -20,3 +20,12 @@ body{
     background-size: cover;
     background-position: center;
 }
+#container{
+    padding: 10px 10%;
+}
+nav{
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    flex-wrap: wrap;
+}
