--- a/style.css
+++ b/style.css
@@ -33,3 +33,20 @@ nav{
     width: 200;
     border-radius: 150px;
 }
+nav ul li{
+    display: inline-block;
+    list-style: none;
+    margin: 10px 20px;
+}
+nav ul li a{
+    color: #fff;
+    text-decoration: none;
+    font-size: 18px;
+    position: relative;
+}
+nav ul li a::after{
+    width: 100%;
+}
+nav ul li a:hover::after{
+    width: 100%;
+}
