--- a/style.css
+++ b/style.css
@@ -39,7 +39,7 @@ nav ul li{
     margin: 10px 20px;
 }
 nav ul li a{
-    color: #fff;
+    color: #000000d3;
     text-decoration: none;
     font-size: 18px;
     position: relative;
