start of portfolio

--- a/style.css
+++ b/style.css
@@ -175,3 +175,4 @@ nav ul li a:hover::after{
     background: #ff004f;
     transform: translateY(-10px);
 }
+/*----------------------portfolio------------------------*/
