--- a/style.css
+++ b/style.css
@@ -1,8 +1,8 @@
 *{
     margin: 0;
-    padding: 0;
     font-family:Verdana, Geneva, Tahoma, sans-serif;
     box-sizing: border-box;
+    padding: 5px;
 }
 
 html{
@@ -16,9 +16,10 @@ body{
 #header{
     width: 100%;
     height: 100vh;
-    background-image: url(Images/On\ the\ computer.jpeg);
+    background-image: url(Images/pexels-ketut-subiyanto-4560175.jpg);
     background-size: cover;
     background-position: center;
+    border-radius: 25px;
 }
 #container{
     padding: 10px 10%;
@@ -39,7 +40,7 @@ nav ul li{
     margin: 10px 20px;
 }
 nav ul li a{
-    color: #000090;
+    color: #fff1f1;
     text-decoration: none;
     font-size: 18px;
     font-weight: bold;
@@ -52,7 +53,7 @@ nav ul li a:hover::after{
     width: 100%;
 }
 .header-text{
-    color: #000090;
+    color: #e44242;
     margin-top: 20px;
     font-size: 20px;
     font-weight: bold;
@@ -65,7 +66,7 @@ nav ul li a:hover::after{
     font-size: 25px;
 }
 .header-text span{
-    color: #131010;
+    color: #fbf1f1;
 }
 
 /*------------About------------*/
@@ -282,6 +283,7 @@ nav ul li a:hover::after{
 .btn.btn2{
     display: inline-block;
     background: #ff004f;
+    margin-left: 15px;
 }
 .contact-right form{
     width: 100%;
@@ -302,6 +304,7 @@ form .btn2{
     font-size: 18px;
     margin-top: 20px;
     cursor: pointer;
+    margin-left: 15px;
 }
 .copyright{
     text-align: center;
@@ -309,6 +312,7 @@ form .btn2{
     background: #262626;
     font-weight: 300;
     margin-top: 20px;
+    border-radius: 10px;
 }
 .copyright i{
     color: #ff004f;
@@ -321,14 +325,17 @@ nav .fa-solid{
 
 @media only screen and (max-width: 600px){
     #header{
-        background-image: url(Images/On\ the\ computer.jpeg);
+        background-image: url(Images/pexels-ketut-subiyanto-4560175.jpg);
+    }
+    #container{
+        padding: 10px 5%;
     }
     .header-text{
         margin-top: 100px;
         font-size: 16px;
     }
     .header-text h1{
-        font-size: 30px;
+        font-size: 25px;
     }
     nav .fa-solid{
         display: block;
